<resources>
    <string name="app_name">FitAi Personal Assistant</string>
    <string name="exerciseNameHint">Name</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="start_training_in">Start training in…</string>
    <string name="open_home_page">Open Home Page</string>
    <string name="go_back_to_home">Go back to home</string>
    <string name="training_countdown_value">5</string>
    <string name="timer_description">Timer</string>
    <string name="home">Home</string>
    <string name="training">Training</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="dashboard">Dashboard</string>
    <string name="workouts_description">Workouts</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="form_new_exercise_description">Training a new exercise is easy. Just give it a name (e.g. squats, curls, push-ups, etc.) and input the number of reps. Remember, the number of reps should be between 10 and 25 since this is training data for our AI algorithm. You should consider doing multiple sets to help improve the training data.</string>
    <string name="form_previous_exercise_title">Start Training</string>
    <string name="form_new_exercise_title">New exercise</string>
    <string name="form_exercise_name_label">What\'s the name of your new exercise?</string>
    <string name="form_exercise_reps_label">Number of reps per set</string>
    <string name="form_exercise_reps_default_value">0</string>
    <string name="form_exercise_create_button_label">Create</string>
    <string name="train_a_previous_exercise_button_description">Train an exercise</string>
    <string name="train_a_new_exercise_button_description">Create a new exercise</string>
    <string name="training_title_text">Training</string>
    <string name="start_training_button_text">Start Training</string>
    <string name="finishedTrainingRepsText">Finished</string>
    <string name="workouts_title">Your Workouts</string>
    <string name="create_new_exercise_button">Create new exercise</string>
    <string name="workout_button_label">Workout</string>
    <string name="train_ml_model_button_label">Train ML Model</string>
    <string name="build_ml_model_button_label">Build ML Model</string>
    <string name="disabled_ml_model_message">Train your ML model</string>
    <string
        name="workout_disabled_message">Build your ML model (or train one)</string>
    <string name="no_pose_detected">NO POSE DETECTED</string>
</resources>